# QtQmlRemoteObjectsDemo

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
client/qml/: main.qml
common/: CMakeLists.txt  server_replica.cpp  server_replica.h
common/rep/: server.rep
server/: CMakeLists.txt  client_channel_source.cpp  client_channel_source.h  main.cpp  server_source.cpp  server_source.h
